adding service tests