@@ -9,38 +9,37 @@ package org.elasticsearch.xpack.inference.services.azureaistudio;
 
 import org.elasticsearch.inference.TaskType;
 
-import java.util.Arrays;
 import java.util.List;
 
 public final class AzureAiStudioProviderCapabilities {
 
     // these providers have embeddings inference
-    private static final List<AzureAiStudioProvider> embeddingProviders = Arrays.asList(
+    public static final List<AzureAiStudioProvider> embeddingProviders = List.of(
         AzureAiStudioProvider.OPENAI,
         AzureAiStudioProvider.COHERE
     );
 
     // these providers have chat completion inference (all providers at the moment)
-    private static final List<AzureAiStudioProvider> chatCompletionProviders = Arrays.asList(AzureAiStudioProvider.values());
+    public static final List<AzureAiStudioProvider> chatCompletionProviders = List.of(AzureAiStudioProvider.values());
 
     // these providers allow token ("pay as you go") embeddings endpoints
-    private static final List<AzureAiStudioProvider> tokenEmbeddingsProviders = List.of(
+    public static final List<AzureAiStudioProvider> tokenEmbeddingsProviders = List.of(
         AzureAiStudioProvider.OPENAI,
         AzureAiStudioProvider.COHERE
     );
 
     // these providers allow realtime embeddings endpoints (none at the moment)
-    private static final List<AzureAiStudioProvider> realtimeEmbeddingsProviders = List.of();
+    public static final List<AzureAiStudioProvider> realtimeEmbeddingsProviders = List.of();
 
     // these providers allow token ("pay as you go") chat completion endpoints
-    private static final List<AzureAiStudioProvider> tokenCompletionProviders = List.of(
+    public static final List<AzureAiStudioProvider> tokenChatCompletionProviders = List.of(
         AzureAiStudioProvider.OPENAI,
         AzureAiStudioProvider.META,
         AzureAiStudioProvider.COHERE
     );
 
     // these providers allow realtime chat completion endpoints
-    private static final List<AzureAiStudioProvider> realtimeCompletionProviders = List.of(
+    public static final List<AzureAiStudioProvider> realtimeChatCompletionProviders = List.of(
         AzureAiStudioProvider.MISTRAL,
         AzureAiStudioProvider.META,
         AzureAiStudioProvider.MICROSOFT_PHI,
@@ -70,8 +69,8 @@ public final class AzureAiStudioProviderCapabilities {
         switch (taskType) {
             case COMPLETION -> {
                 return (endpointType == AzureAiStudioEndpointType.TOKEN)
-                    ? tokenCompletionProviders.contains(provider)
-                    : realtimeCompletionProviders.contains(provider);
+                    ? tokenChatCompletionProviders.contains(provider)
+                    : realtimeChatCompletionProviders.contains(provider);
             }
             case TEXT_EMBEDDING -> {
                 return (endpointType == AzureAiStudioEndpointType.TOKEN)
